<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>JsonEditorMain</class>
 <widget class="QMainWindow" name="JsonEditorMain">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>696</width>
    <height>489</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Json Editor[*]</string>
  </property>
  <widget class="QWidget" name="centralWidget">
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
     <widget class="QSplitter" name="splitter">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
      <widget class="QTextEdit" name="jsonCode"/>
      <widget class="QTreeView" name="jsonTree">
       <property name="alternatingRowColors">
        <bool>true</bool>
       </property>
       <property name="selectionBehavior">
        <enum>QAbstractItemView::SelectRows</enum>
       </property>
       <property name="autoExpandDelay">
        <number>1</number>
       </property>
       <property name="animated">
        <bool>true</bool>
       </property>
      </widget>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menuBar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>696</width>
     <height>21</height>
    </rect>
   </property>
   <widget class="QMenu" name="menu">
    <property name="title">
     <string>File</string>
    </property>
    <addaction name="menuNewFile"/>
    <addaction name="menuOpenFile"/>
    <addaction name="menuSaveFile"/>
    <addaction name="menuSaveAs"/>
    <addaction name="separator"/>
    <addaction name="menuRecent"/>
    <addaction name="separator"/>
    <addaction name="menuExit"/>
   </widget>
   <widget class="QMenu" name="menu_2">
    <property name="title">
     <string>Edit</string>
    </property>
    <addaction name="menuUndo"/>
    <addaction name="menuRedo"/>
    <addaction name="separator"/>
    <addaction name="menuCut"/>
    <addaction name="menuCopy"/>
    <addaction name="menuPaste"/>
    <addaction name="menuSelectAll"/>
    <addaction name="separator"/>
   </widget>
   <widget class="QMenu" name="menu_3">
    <property name="title">
     <string>Find</string>
    </property>
    <widget class="QMenu" name="menu_6">
     <property name="title">
      <string>Toolbars</string>
     </property>
     <addaction name="menuFileTools"/>
     <addaction name="menuEditTools"/>
     <addaction name="menuFindTools"/>
     <addaction name="menuCodeTools"/>
    </widget>
    <addaction name="menu_6"/>
    <addaction name="menuStatubar"/>
    <addaction name="separator"/>
    <addaction name="menuFind"/>
    <addaction name="menuReplace"/>
    <addaction name="separator"/>
    <addaction name="menuExpand"/>
    <addaction name="menuCollapse"/>
   </widget>
   <widget class="QMenu" name="menu_4">
    <property name="title">
     <string>About</string>
    </property>
    <addaction name="menuAbout"/>
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QMenu" name="menu_5">
    <property name="title">
     <string>Tools</string>
    </property>
    <addaction name="menuRefresh"/>
    <addaction name="menuFormat"/>
    <addaction name="separator"/>
    <addaction name="menuInsertNode"/>
    <addaction name="menuDeleteNode"/>
    <addaction name="menuInsertChild"/>
   </widget>
   <addaction name="menu"/>
   <addaction name="menu_2"/>
   <addaction name="menu_5"/>
   <addaction name="menu_3"/>
   <addaction name="menu_4"/>
  </widget>
  <widget class="QToolBar" name="fileToolBar">
   <property name="iconSize">
    <size>
     <width>32</width>
     <height>32</height>
    </size>
   </property>
   <attribute name="toolBarArea">
    <enum>TopToolBarArea</enum>
   </attribute>
   <attribute name="toolBarBreak">
    <bool>false</bool>
   </attribute>
   <addaction name="menuNewFile"/>
   <addaction name="menuOpenFile"/>
   <addaction name="menuSaveFile"/>
   <addaction name="menuExit"/>
  </widget>
  <widget class="QStatusBar" name="statusBar"/>
  <widget class="QToolBar" name="editToolBar">
   <property name="windowTitle">
    <string>toolBar</string>
   </property>
   <property name="iconSize">
    <size>
     <width>32</width>
     <height>32</height>
    </size>
   </property>
   <attribute name="toolBarArea">
    <enum>TopToolBarArea</enum>
   </attribute>
   <attribute name="toolBarBreak">
    <bool>false</bool>
   </attribute>
   <addaction name="menuCut"/>
   <addaction name="menuCopy"/>
   <addaction name="menuPaste"/>
   <addaction name="menuUndo"/>
   <addaction name="menuRedo"/>
  </widget>
  <widget class="QToolBar" name="findToolBar">
   <property name="windowTitle">
    <string>toolBar_2</string>
   </property>
   <property name="iconSize">
    <size>
     <width>32</width>
     <height>32</height>
    </size>
   </property>
   <attribute name="toolBarArea">
    <enum>TopToolBarArea</enum>
   </attribute>
   <attribute name="toolBarBreak">
    <bool>false</bool>
   </attribute>
   <addaction name="menuFind"/>
   <addaction name="menuReplace"/>
  </widget>
  <widget class="QToolBar" name="codeToolBar">
   <property name="windowTitle">
    <string>toolBar_3</string>
   </property>
   <property name="iconSize">
    <size>
     <width>32</width>
     <height>32</height>
    </size>
   </property>
   <attribute name="toolBarArea">
    <enum>TopToolBarArea</enum>
   </attribute>
   <attribute name="toolBarBreak">
    <bool>false</bool>
   </attribute>
   <addaction name="menuFormat"/>
   <addaction name="menuRefresh"/>
   <addaction name="separator"/>
   <addaction name="menuInsertNode"/>
   <addaction name="menuDeleteNode"/>
   <addaction name="menuInsertChild"/>
  </widget>
  <action name="menuNewFile">
   <property name="icon">
    <iconset resource="jsoneditor.qrc">
     <normaloff>:/ToolbarIcon/images/document-new.png</normaloff>:/ToolbarIcon/images/document-new.png</iconset>
   </property>
   <property name="text">
    <string>New</string>
   </property>
   <property name="toolTip">
    <string>New</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+N</string>
   </property>
  </action>
  <action name="menuOpenFile">
   <property name="icon">
    <iconset resource="jsoneditor.qrc">
     <normaloff>:/ToolbarIcon/images/document-open.png</normaloff>:/ToolbarIcon/images/document-open.png</iconset>
   </property>
   <property name="text">
    <string>Open</string>
   </property>
   <property name="toolTip">
    <string>Open</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+O</string>
   </property>
  </action>
  <action name="menuSaveFile">
   <property name="icon">
    <iconset resource="jsoneditor.qrc">
     <normaloff>:/ToolbarIcon/images/media-floppy.png</normaloff>:/ToolbarIcon/images/media-floppy.png</iconset>
   </property>
   <property name="text">
    <string>Save</string>
   </property>
   <property name="toolTip">
    <string>Save</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+S</string>
   </property>
  </action>
  <action name="menuSaveAs">
   <property name="text">
    <string>Save As...</string>
   </property>
   <property name="toolTip">
    <string>Save As</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+Shift+S</string>
   </property>
  </action>
  <action name="menuRecent">
   <property name="enabled">
    <bool>false</bool>
   </property>
   <property name="text">
    <string>Recent</string>
   </property>
   <property name="toolTip">
    <string>Recent</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+1</string>
   </property>
  </action>
  <action name="menuExit">
   <property name="icon">
    <iconset resource="jsoneditor.qrc">
     <normaloff>:/ToolbarIcon/images/system-log-out.png</normaloff>:/ToolbarIcon/images/system-log-out.png</iconset>
   </property>
   <property name="text">
    <string>Exit</string>
   </property>
   <property name="toolTip">
    <string>Exit</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+Q</string>
   </property>
  </action>
  <action name="menuUndo">
   <property name="icon">
    <iconset resource="jsoneditor.qrc">
     <normaloff>:/ToolbarIcon/images/edit-undo.png</normaloff>:/ToolbarIcon/images/edit-undo.png</iconset>
   </property>
   <property name="text">
    <string>Undo</string>
   </property>
   <property name="toolTip">
    <string>Undo</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+Z</string>
   </property>
  </action>
  <action name="menuCut">
   <property name="icon">
    <iconset resource="jsoneditor.qrc">
     <normaloff>:/ToolbarIcon/images/edit-cut.png</normaloff>:/ToolbarIcon/images/edit-cut.png</iconset>
   </property>
   <property name="text">
    <string>Cut</string>
   </property>
   <property name="toolTip">
    <string>Cut</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+X</string>
   </property>
  </action>
  <action name="menuCopy">
   <property name="icon">
    <iconset resource="jsoneditor.qrc">
     <normaloff>:/ToolbarIcon/images/edit-copy.png</normaloff>:/ToolbarIcon/images/edit-copy.png</iconset>
   </property>
   <property name="text">
    <string>Copy</string>
   </property>
   <property name="toolTip">
    <string>Copy</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+C</string>
   </property>
  </action>
  <action name="menuPaste">
   <property name="icon">
    <iconset resource="jsoneditor.qrc">
     <normaloff>:/ToolbarIcon/images/edit-paste.png</normaloff>:/ToolbarIcon/images/edit-paste.png</iconset>
   </property>
   <property name="text">
    <string>Paste</string>
   </property>
   <property name="toolTip">
    <string>Paste</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+V</string>
   </property>
  </action>
  <action name="menuFormat">
   <property name="icon">
    <iconset resource="jsoneditor.qrc">
     <normaloff>:/ToolbarIcon/images/format-justify-right.png</normaloff>:/ToolbarIcon/images/format-justify-right.png</iconset>
   </property>
   <property name="text">
    <string>Format</string>
   </property>
   <property name="toolTip">
    <string>Format</string>
   </property>
   <property name="shortcut">
    <string>Shift+F</string>
   </property>
  </action>
  <action name="menuRefresh">
   <property name="icon">
    <iconset resource="jsoneditor.qrc">
     <normaloff>:/ToolbarIcon/images/view-refresh.png</normaloff>:/ToolbarIcon/images/view-refresh.png</iconset>
   </property>
   <property name="text">
    <string>Refresh</string>
   </property>
   <property name="toolTip">
    <string>Refresh</string>
   </property>
   <property name="shortcut">
    <string>Shift+R</string>
   </property>
  </action>
  <action name="menuStatubar">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="checked">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Statusbar</string>
   </property>
   <property name="toolTip">
    <string>Statusbar</string>
   </property>
   <property name="shortcut">
    <string>Shift+S</string>
   </property>
  </action>
  <action name="menuAbout">
   <property name="text">
    <string>About</string>
   </property>
   <property name="toolTip">
    <string>About</string>
   </property>
   <property name="shortcut">
    <string>Shift+A</string>
   </property>
  </action>
  <action name="menuHelp">
   <property name="text">
    <string>Help</string>
   </property>
   <property name="toolTip">
    <string>Help</string>
   </property>
   <property name="shortcut">
    <string>F1</string>
   </property>
  </action>
  <action name="menuRedo">
   <property name="icon">
    <iconset resource="jsoneditor.qrc">
     <normaloff>:/ToolbarIcon/images/edit-redo.png</normaloff>:/ToolbarIcon/images/edit-redo.png</iconset>
   </property>
   <property name="text">
    <string>Redo</string>
   </property>
   <property name="toolTip">
    <string>Redo</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+Y</string>
   </property>
  </action>
  <action name="menuSelectAll">
   <property name="text">
    <string>Select All</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+A</string>
   </property>
  </action>
  <action name="menuFind">
   <property name="icon">
    <iconset resource="jsoneditor.qrc">
     <normaloff>:/ToolbarIcon/images/edit-find.png</normaloff>:/ToolbarIcon/images/edit-find.png</iconset>
   </property>
   <property name="text">
    <string>Find</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+F</string>
   </property>
  </action>
  <action name="menuReplace">
   <property name="icon">
    <iconset resource="jsoneditor.qrc">
     <normaloff>:/ToolbarIcon/images/edit-find-replace.png</normaloff>:/ToolbarIcon/images/edit-find-replace.png</iconset>
   </property>
   <property name="text">
    <string>Replace</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+H</string>
   </property>
  </action>
  <action name="menuFileTools">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="checked">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Tools</string>
   </property>
  </action>
  <action name="menuEditTools">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="checked">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Edit</string>
   </property>
  </action>
  <action name="menuFindTools">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="checked">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Find</string>
   </property>
  </action>
  <action name="menuCodeTools">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="checked">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Code</string>
   </property>
  </action>
  <action name="menuInsertNode">
   <property name="icon">
    <iconset resource="jsoneditor.qrc">
     <normaloff>:/ToolbarIcon/images/list-add.png</normaloff>:/ToolbarIcon/images/list-add.png</iconset>
   </property>
   <property name="text">
    <string>Insert Node</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+I</string>
   </property>
  </action>
  <action name="menuDeleteNode">
   <property name="enabled">
    <bool>false</bool>
   </property>
   <property name="icon">
    <iconset resource="jsoneditor.qrc">
     <normaloff>:/ToolbarIcon/images/list-remove.png</normaloff>:/ToolbarIcon/images/list-remove.png</iconset>
   </property>
   <property name="text">
    <string>Delete Node</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+D</string>
   </property>
  </action>
  <action name="menuInsertChild">
   <property name="enabled">
    <bool>false</bool>
   </property>
   <property name="icon">
    <iconset resource="jsoneditor.qrc">
     <normaloff>:/ToolbarIcon/images/list-addchild.png</normaloff>:/ToolbarIcon/images/list-addchild.png</iconset>
   </property>
   <property name="text">
    <string>Insert Child</string>
   </property>
   <property name="toolTip">
    <string>Insert Child</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+Shift+I</string>
   </property>
  </action>
  <action name="menuExpand">
   <property name="text">
    <string>Expand</string>
   </property>
   <property name="shortcut">
    <string>Ctrl++</string>
   </property>
  </action>
  <action name="menuCollapse">
   <property name="text">
    <string>Collapse</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+-</string>
   </property>
  </action>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources>
  <include location="jsoneditor.qrc"/>
 </resources>
 <connections>
  <connection>
   <sender>menuExit</sender>
   <signal>triggered()</signal>
   <receiver>JsonEditorMain</receiver>
   <slot>close()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>-1</x>
     <y>-1</y>
    </hint>
    <hint type="destinationlabel">
     <x>362</x>
     <y>271</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>menuSelectAll</sender>
   <signal>triggered()</signal>
   <receiver>jsonCode</receiver>
   <slot>selectAll()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>-1</x>
     <y>-1</y>
    </hint>
    <hint type="destinationlabel">
     <x>545</x>
     <y>278</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>menuCut</sender>
   <signal>triggered()</signal>
   <receiver>jsonCode</receiver>
   <slot>cut()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>-1</x>
     <y>-1</y>
    </hint>
    <hint type="destinationlabel">
     <x>545</x>
     <y>278</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>menuCopy</sender>
   <signal>triggered()</signal>
   <receiver>jsonCode</receiver>
   <slot>copy()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>-1</x>
     <y>-1</y>
    </hint>
    <hint type="destinationlabel">
     <x>545</x>
     <y>278</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>menuPaste</sender>
   <signal>triggered()</signal>
   <receiver>jsonCode</receiver>
   <slot>paste()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>-1</x>
     <y>-1</y>
    </hint>
    <hint type="destinationlabel">
     <x>545</x>
     <y>278</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>menuUndo</sender>
   <signal>triggered()</signal>
   <receiver>jsonCode</receiver>
   <slot>undo()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>-1</x>
     <y>-1</y>
    </hint>
    <hint type="destinationlabel">
     <x>545</x>
     <y>278</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>menuRedo</sender>
   <signal>triggered()</signal>
   <receiver>jsonCode</receiver>
   <slot>redo()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>-1</x>
     <y>-1</y>
    </hint>
    <hint type="destinationlabel">
     <x>545</x>
     <y>278</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>menuNewFile</sender>
   <signal>triggered()</signal>
   <receiver>jsonCode</receiver>
   <slot>clear()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>-1</x>
     <y>-1</y>
    </hint>
    <hint type="destinationlabel">
     <x>545</x>
     <y>278</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>menuExpand</sender>
   <signal>triggered()</signal>
   <receiver>jsonTree</receiver>
   <slot>expandAll()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>-1</x>
     <y>-1</y>
    </hint>
    <hint type="destinationlabel">
     <x>545</x>
     <y>293</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>menuCollapse</sender>
   <signal>triggered()</signal>
   <receiver>jsonTree</receiver>
   <slot>collapseAll()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>-1</x>
     <y>-1</y>
    </hint>
    <hint type="destinationlabel">
     <x>545</x>
     <y>293</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
